# staticlib_config

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: BaseException_8hpp.html  BaseException_8hpp_source.html  annotated.html  assert_8hpp.html  assert_8hpp_source.html  classes.html  classstaticlib_1_1config_1_1AssertException-members.html  classstaticlib_1_1config_1_1AssertException.html  classstaticlib_1_1config_1_1BaseException-members.html  classstaticlib_1_1config_1_1BaseException.html  classstaticlib_1_1config_1_1assert__exception-members.html  classstaticlib_1_1config_1_1assert__exception.html  config_8hpp.html  config_8hpp_source.html  current__function_8hpp.html  current__function_8hpp_source.html  dir_6c9b6a6271ab413df2e14d35324f27a6.html  dir_c33d3ca81783b96de1fd366e75cb14d0.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  make__unique_8hpp.html  make__unique_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestaticlib.html  namespacestaticlib_1_1config.html  noexcept_8hpp.html  noexcept_8hpp_source.html  os_8hpp.html  os_8hpp_source.html  to__string_8hpp.html  to__string_8hpp_source.html  tracemsg_8hpp.html  (+1 more)
docs/html/search/: all_61.js  all_62.js  all_6d.js  all_6e.js  all_73.js  all_74.js  classes_61.js  classes_62.js  defines_73.js  defines_74.js  files_61.js  files_62.js  files_63.js  files_6d.js  (+9 more)
include/staticlib/: config.hpp
test/: BaseException_test.cpp  CMakeLists.txt  assert_test.cpp  current_function_test.cpp  defer_test.cpp  is_integer_test.cpp  make_unique_test.cpp  noexcept_test.cpp  observer_ptr_test.cpp  optional_test.cpp  os_test.cpp  span_test.cpp  staticlib_exception_test.cpp  to_string_test.cpp  tracemsg_test.cpp
(+14 files in other folders)
